GPII-878: Fixing heading one and two of language and volume panels. Fixing heading one of contrast and increase size panels.

--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -80,7 +80,7 @@ h2 > label {
 */
 .gpii-prefsEditor-headerImage {
     -webkit-font-smoothing: antialiased;
-    width: calc(100% - 2px);;
+    width: calc(17% - 2px);
     margin: 0px !important;
     color: white;
     background-color: #566374;
@@ -119,8 +119,31 @@ input[type=checkbox]:checked + .gpii-prefsEditor-headerImage > .gpii-prefsEditor
     content: "\e613";
 }
 
+.gpii-prefsEditor-increaseSizePanel .gpii-prefsEditor-headerImage:before {
+    content: "\e613";
+}
+
 .gpii-prefsEditor-contrastPanel > .gpii-prefsEditor-headerImage:before {
     content: "\e60e";
+}
+
+.gpii-prefsEditor-contrastPanel .gpii-prefsEditor-headerImage:before {
+    content: "\e60e";
+}
+
+.gpii-prefsEditor-headerTitle-withoutIcon {
+    font-family: 'Roboto Slab', serif;
+    color: white;
+    font-size: 1.8em !important;
+    display: table-cell;
+    color: #FFFFFF;
+    float: none;
+    vertical-align: middle;
+    width: 250px;
+    height: 90px;
+    background-color: #566374;
+    border: 1px solid #566374;
+    padding-right: 230px;
 }
 
 .gpii-prefsEditor-headerTitle {
